--- a/pages/shared/data/roadshow.yaml
+++ b/pages/shared/data/roadshow.yaml
@@ -13,7 +13,7 @@ nextstop:
     location: TBD
   - title: Dhaka
     coords: 82x21
-    time: Postponrd
+    time: Postponed
     location: TBD
   - title: Colombo
     coords: 79x27
